# dspy-coding-agent-lms

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: async_usage.py  basic_usage.py  structured_output.py  with_tools.py
src/dspy_coding_agent_lms/: __init__.py  auth.py  cache.py  cli.py  config.py  exceptions.py  lm.py  response.py  transcript.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_claude_code_integration.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_lm.py  test_response.py  test_transcript.py
