[project]
name = "dspy-coding-agent-lms"
version = "0.1.2"
description = "DSPy LM integration for Claude Code CLI - route DSPy requests through local Claude Code agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "DSPy Coding Agent LMs Contributors" }
]
keywords = ["dspy", "claude", "claude-code", "llm", "ai", "agents", "coding-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "dspy>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/saurabhdas/dspy-coding-agent-lms"
Documentation = "https://github.com/saurabhdas/dspy-coding-agent-lms#readme"
Repository = "https://github.com/saurabhdas/dspy-coding-agent-lms"
Issues = "https://github.com/saurabhdas/dspy-coding-agent-lms/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dspy_coding_agent_lms"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["dspy_coding_agent_lms"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --cov=dspy_coding_agent_lms --cov-report=term-missing"

[tool.coverage.run]
source = ["src/dspy_coding_agent_lms"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
